<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:strokeWidth="0dp">

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="170dp">

            <ImageView
                android:id="@+id/thumbnail_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:id="@+id/owned_text_rl"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:rotation="-40"
                android:visibility="gone"
                android:translationY="20dp"
                android:translationX="-85dp"
                android:background="#A8252525">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/montserrat"
                    android:paddingHorizontal="12dp"
                    android:text="@string/owned"
                    android:textColor="#E6E6E6"
                    android:textSize="18sp" />

            </RelativeLayout>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:paddingHorizontal="12dp"
        android:text="@string/title"
        android:textColor="@color/text_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/educator_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/montserrat"
        android:paddingHorizontal="12dp"
        android:text="@string/educator"
        android:textColor="@color/secondary_text_color"
        android:textSize="13sp" />

</androidx.appcompat.widget.LinearLayoutCompat>