<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <TextView
            android:id="@+id/collection_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/collection"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/description_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@id/collection_name"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            android:src="@drawable/ic_info"
            app:tint="@color/text_color" />

        <TextView
            android:id="@+id/view_all_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:drawablePadding="4dp"
            android:focusable="true"
            android:fontFamily="@font/montserrat"
            android:foreground="?selectableItemBackgroundBorderless"
            android:text="@string/view_all"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            app:drawableEndCompat="@drawable/ic_play"
            app:drawableTint="@color/text_color" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/content_rec_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/sorry_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/montserrat_medium"
            android:padding="24dp"
            android:text="@string/no_data_available"
            android:textColor="@color/text_color"
            android:textSize="18sp" />
    </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>